See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.71.00

              ppmtoarbtxt: fix bug: wrong output when high numbers represent
              darker.  Broken in Netpbm 10.69 (November 2014).

              ppmtoarbtxt: better rounding in sample values.

              test: replace some GNU-only code with more portable code that
              works on OS X.  Thanks Ryan Schmidt <ryandesign@macports.org>.

              makeman: deal properly with backlash in source.  Thanks Willem
              van Schaik <willem@schaik.com>.

              Build: work around bug in GCC < 4.2 related to SSE2 builtins
              that causes compile of pamflip to fail.

              Build: fix 'make package' where config.mk sets a subdirectory
              other than 'man' for the manual.

15.03.29 BJH  Release 10.70.00

              Add st4topgm, pgmtost4.

              Add pgmtosbig.  Mainly a test tool for sbigtopgm.

              Add yuy2topam.  Thanks Michael Haardt.

              tifftopnm: allow input file to be nonseekable.
              Thanks Ludolf Holzheid <ludolf.holzheid@gmx.de>.

              pnmhisteq: add -noblack and -nowhite.  Idea from Andrew Brooks
              <arb@sat.dundee.ac.uk>.

              pgmmorphconv: add -gradient.  Thanks Michael Haardt
              <michael@moria.de>.

              giftopnm: Fix bug: crashes if purported GIF has neither a global
              color map nor a local one.

              pgmmorphconv: fix bug: always produces PGM Plain format.  Always
              present (progam was added to Netpbm in Release 10.0 (June 2002)).

              pamtilt: fix bug: unconditional crash.  Broken in Netpbm 10.63
              (June 2013).

              pnmgamma -srgbtobt709, -bt709tosrgb: fix bug; incorrect output
              nearly always.  Always broken (These options were new in
              Netpbm 10.32 (February 2006)).
